syntax = "proto3";

package protocol;

option go_package = "./protocol";

message HeartBeat {
  int64 timestamp = 1;
}

